--- a/server/package.json
+++ b/server/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "test": "jest",
     "server": "npx ts-node server.ts --experimental-modules",
-    "client": "cd ../client && npm start && cd -",
-    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm start client\""
+    "client": "npm start --prefix ../client/",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "type": "module",
   "jest": {
